--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,7 +17,7 @@
     box-sizing: border-box;
 }
 
-body {
+body, html {
     background-color: #414345;
     width: 100vw;
     height: 100vh;
@@ -25,7 +25,6 @@ body {
 
 main {
     position: relative;
-    margin: auto;
     width: 100vw;
     height: 100vh;
 }
@@ -34,15 +33,16 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
-    transition: width 0.3s, height 0.3s;
 
     background-color: #232526;
     width: 250px;
     height: 575px;
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    transform: translate(-50%, -50%);
+    transition: width 0.3s, height 0.3s;
 }
 
 div#imagem {
