--- a/css/mobile.css
+++ b/css/mobile.css
@@ -60,3 +60,11 @@ div#formulario {
     color: #f0f8ff;
     padding: 10px;
 }
+
+div#formulario > h1 {
+    padding: 10px;
+}
+
+div#formulario > p {
+    padding-bottom: 50px;
+}
